# agentic-object-detection

./: .gitignore  pyproject.toml
notebook/: overview.ipynb  practice.ipynb  practice_optimized.ipynb
sctipts/: app.py  run.py
src/: config.py  pipeline.py  utils.py  vlm_tool.py
src/agentic_object_detection/: __init__.py
