[project]
name = "agentic-object-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hjjjgoh", email = "hj.goh@kist.re.kr" }
]
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "jupyterlab>=4.4.9",
    "openai>=2.1.0",
    "opencv-python>=4.12.0.88",
    "torch==2.4.1",
    "torchvision==0.19.1",
    "transformers>=4.57.0",
]

[project.optional-dependencies]
dev = [
    "jupyterlab",
    "ipykernel",
    "python-dotenv",
]


[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
